# portal_inmobiliario_scrapper

./: .gitignore  README.md  main.py  pyproject.toml
src/: logs.py  portal_crawler.py  summary.py
